--- a/homework/lesson-05/Dockerfile
+++ b/homework/lesson-05/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 
 COPY ["Pipfile", "Pipfile.lock", "./"]
 
+RUN pipenv install --system --deploy
+
 COPY ["flask_api.py", "./"]
 
 EXPOSE 9696
